syntax = "proto3";

enum CountryCode {
    NA                             = 0;
    ALL                            = 1;
    NORTH_AMERICA                  = 2;
    SOUTH_AMERICA                  = 3;
    EUROPE                         = 4;
    AFRICA                         = 5;
    ASIA                           = 6;
    AFGHANISTAN                    = 7;
    ALAND_ISLANDS                  = 8;
    ALBANIA                        = 9;
    ALGERIA                        = 10;
    AMERICAN_SAMOA                 = 11;
    ANDORRA                        = 12;
    ANGOLA                         = 13;
    ANGUILLA                       = 14;
    ANTIGUA                        = 15;
    ARGENTINA                      = 16;
    ARMENIA                        = 17;
    ARUBA                          = 18;
    AUSTRALIA                      = 19;
    AUSTRIA                        = 20;
    AZERBAIJAN                     = 21;
    BAHAMAS                        = 22;
    BAHRAIN                        = 23;
    BANGLADESH                     = 24;
    BARBADOS                       = 25;
    BELARUS                        = 26;
    BELGIUM                        = 27;
    BELIZE                         = 28;
    BENIN                          = 29;
    BERMUDA                        = 30;
    BHUTAN                         = 31;
    BOLIVIA                        = 32;
    BONAIRE_SINT_EUSTATIUS_SABA    = 33;
    BOSNIA                         = 34;
    BOTSWANA                       = 35;
    BOUVET_ISLAND                  = 36;
    BRAZIL                         = 37;
    BRITISH_INDIAN_OCEAN_TERRITORY = 38;
    BRUNEI_DARUSSALAM              = 39;
    BULGARIA                       = 40;
    BURKINA_FASO                   = 41;
    BURUNDI                        = 42;
    CABO_VERDE                     = 43;
    CAMBODIA                       = 44;
    CAMEROON                       = 45;
    CANADA                         = 46;
    CAYMAN_ISLANDS                 = 47;
    CENTRAL_AFRICAN_REPUBLIC       = 48;
    CHAD                           = 49;
    CHILE                          = 50;
    CHINA                          = 51;
    CHRISTMAS_ISLAND               = 52;
    COCOS_ISLANDS                  = 53;
    COLOMBIA                       = 54;
    COMOROS                        = 55;
    CONGO_REPUBLIC                 = 56;
    CONGO                          = 57;
    COOK_ISLANDS                   = 58;
    COSTA_RICA                     = 59;
    COTE_DIVOIRE                   = 60;
    CROATIA                        = 61;
    CUBA                           = 62;
    CURACAO                        = 63;
    CYPRUS                         = 64;
    CZECH_REPUBLIC                 = 65;
    DENMARK                        = 66;
    DJIBOUTI                       = 67;
    DOMINICA                       = 68;
    DOMINICAN_REPUBLIC             = 69;
    ECUADOR                        = 70;
    EGYPT                          = 71;
    EL_SALVADOR                    = 72;
    EQUATORIAL_GUINEA              = 73;
    ERITREA                        = 74;
    ESTONIA                        = 75;
    ETHIOPIA                       = 76;
    FALKLAND_ISLANDS               = 77;
    FAROE_ISLANDS                  = 78;
    FIJI                           = 79;
    FINLAND                        = 80;
    FRANCE                         = 81;
    FRENCH_GUIANA                  = 82;
    FRENCH_POLYNESIA               = 83;
    FRENCH_SOUTHERN_TERRITORIES    = 84;
    GABON                          = 85;
    GAMBIA                         = 86;
    GEORGIA                        = 87;
    GERMANY                        = 88;
    GHANA                          = 89;
    GIBRALTAR                      = 90;
    GREECE                         = 91;
    GREENLAND                      = 92;
    GRENADA                        = 93;
    GUADELOUPE                     = 94;
    GUAM                           = 95;
    GUATEMALA                      = 96;
    GUERNSEY                       = 97;
    GUINEA                         = 98;
    GUINEA_BISSAU                  = 99;
    GUYANA                         = 100;
    HAITI                          = 101;
    HEARD_ISLAND                   = 102;
    HOLY_SEE                       = 103;
    HONDURAS                       = 104;
    HONG_KONG                      = 105;
    HUNGARY                        = 106;
    ICELAND                        = 107;
    INDIA                          = 108;
    INDONESIA                      = 109;
    IRAN                           = 110;
    IRAQ                           = 111;
    IRELAND                        = 112;
    ISLE_OF_MAN                    = 113;
    ISRAEL                         = 114;
    ITALY                          = 115;
    JAMAICA                        = 116;
    JAPAN                          = 117;
    JERSEY                         = 118;
    JORDAN                         = 119;
    KAZAKHSTAN                     = 120;
    KENYA                          = 121;
    KIRIBATI                       = 122;
    NORTH_KOREA                    = 123;
    SOUTH_KOREA                    = 124;
    KUWAIT                         = 125;
    KYRGYZSTAN                     = 126;
    LAO                            = 127;
    LATVIA                         = 128;
    LEBANON                        = 129;
    LESOTHO                        = 130;
    LIBERIA                        = 131;
    LIBYA                          = 132;
    LIECHTENSTEIN                  = 133;
    LITHUANIA                      = 134;
    LUXEMBOURG                     = 135;
    MACAO                          = 136;
    MACEDONIA                      = 137;
    MADAGASCAR                     = 138;
    MALAWI                         = 139;
    MALAYSIA                       = 140;
    MALDIVES                       = 141;
    MALI                           = 142;
    MALTA                          = 143;
    MARSHALL_ISLANDS               = 144;
    MARTINIQUE                     = 145;
    MAURITANIA                     = 146;
    MAURITIUS                      = 147;
    MAYOTTE                        = 148;
    MEXICO                         = 149;
    MICRONESIA                     = 150;
    MOLDOVA                        = 151;
    MONACO                         = 152;
    MONGOLIA                       = 153;
    MONTENEGRO                     = 154;
    MONTSERRAT                     = 155;
    MOROCCO                        = 156;
    MOZAMBIQUE                     = 157;
    MYANMAR                        = 158;
    NAMIBIA                        = 159;
    NAURU                          = 160;
    NEPAL                          = 161;
    NETHERLANDS                    = 162;
    NEW_CALEDONIA                  = 163;
    NEW_ZEALAND                    = 164;
    NICARAGUA                      = 165;
    NIGER                          = 166;
    NIGERIA                        = 167;
    NIUE                           = 168;
    NORFOLK_ISLAND                 = 169;
    NORTHERN_MARIANA_ISLANDS       = 170;
    NORWAY                         = 171;
    OMAN                           = 172;
    PAKISTAN                       = 173;
    PALAU                          = 174;
    PANAMA                         = 175;
    PAPUA_NEW_GUINEA               = 176;
    PARAGUAY                       = 177;
    PERU                           = 178;
    PHILIPPINES                    = 179;
    PITCAIRN                       = 180;
    POLAND                         = 181;
    PORTUGAL                       = 182;
    PUERTO_RICO                    = 183;
    QATAR                          = 184;
    REUNION                        = 185;
    ROMANIA                        = 186;
    RUSSIA                         = 187;
    RWANDA                         = 188;
    SAINT_BARTHELEMY               = 189;
    SAINT_HELENA                   = 190;
    SAINT_KITTS                    = 191;
    SAINT_LUCIA                    = 192;
    SAINT_MARTIN                   = 193;
    SAINT_PIERRE                   = 194;
    SAINT_VINCENT                  = 195;
    SAMOA                          = 196;
    SAN_MARINO                     = 197;
    SAO_TOME                       = 198;
    SAUDI_ARABIA                   = 199;
    SENEGAL                        = 200;
    SERBIA                         = 201;
    SEYCHELLES                     = 202;
    SIERRA_LEONE                   = 203;
    SINGAPORE                      = 204;
    SINT_MAARTEN                   = 205;
    SUCRE                          = 206;
    SLOVAKIA                       = 207;
    SLOVENIA                       = 208;
    SOLOMON_ISLANDS                = 209;
    SOMALIA                        = 210;
    SOUTH_AFRICA                   = 211;
    SOUTH_SUDAN                    = 212;
    SPAIN                          = 213;
    SRI_LANKA                      = 214;
    SUDAN                          = 215;
    SURINAME                       = 216;
    SVALBARD                       = 217;
    SWAZILAND                      = 218;
    SWEDEN                         = 219;
    SWITZERLAND                    = 220;
    SYRIAN_ARAB_REPUBLIC           = 221;
    TAIWAN                         = 222;
    TAJIKISTAN                     = 223;
    TANZANIA                       = 224;
    THAILAND                       = 225;
    TIMOR_LESTE                    = 226;
    TOGO                           = 227;
    TOKELAU                        = 228;
    TONGA                          = 229;
    TRINIDAD                       = 230;
    TUNISIA                        = 231;
    TURKEY                         = 232;
    TURKMENISTAN                   = 233;
    TURKS_AND_CAICOS_ISLANDS       = 234;
    TUVALU                         = 235;
    UGANDA                         = 236;
    UKRAINE                        = 237;
    UNITED_ARAB_EMIRATES           = 238;
    UNITED_KINGDOM                 = 239;
    UNITED_STATES                  = 240;
    URUGUAY                        = 241;
    UZBEKISTAN                     = 242;
    VANUATU                        = 243;
    VENEZUELA                      = 244;
    VIETNAM                        = 245;
    VIRGIN_ISLANDS_BRITISH         = 246;
    VIRGIN_ISLANDS_US              = 247;
    WALLIS_AND_FUTUNA              = 248;
    WESTERN_SAHARA                 = 249;
    YEMEN                          = 250;
    ZAMBIA                         = 251;
    ZIMBABWE                       = 252;
}